@@ -1,4 +1,5 @@
 
+	* fix loading resume data when in seed mode
 	* fix issue with receiving interested before metadata
 	* fix IPv6 tracker announce issue
 	* restore path sanitization behavior of ":"
